# Velocmd

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  package-lock.json  package.json  sitemap.xml
.github/workflows/: deploy.yml
404/: index.html
about/: index.html
assets/: hero-raw.mkv
blog/: index.html
blog/2026/04/11/velocmd-is-live-instant-search-is-here/: index.html
blog/2026/04/11/velocmd-v10-is-live-instant-search-is-here/: index.html
blog/category/releases/: index.html
changelog/: index.html
docs/: 404.md  about.md  faq.md  features.md  index.md  robots.txt
docs/assets/: hero-raw.mkv
docs/blog/: .authors.yml  index.md
docs/blog/posts/: v1_post.md
docs/getting-started/: installation.md  usage.md
docs/stylesheets/: custom.css
faq/: index.html
features/: index.html
getting-started/installation/: index.html
getting-started/usage/: index.html
overrides/: home.html  main.html
overrides/partials/: footer.html
search/: search_index.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  lib.rs  main.rs
