[package]
name = "velocmd-explorer"
version = "0.1.4"
description = "⚡ A lightning fast, native system launcher"
authors = ["Yashvardhan Gupta"]
edition = "2021"

[lib]
name = "velo_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jwalk = "0.8"
once_cell = "1.18"
systemicons = "0.9" 
image = "0.24"
base64 = "0.21"
bincode = "1.3"
windows = { version = "0.52", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_ProcessStatus", "Win32_System_Threading"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[target."cfg(windows)".dependencies]
tauri-plugin-single-instance = "2.4.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
